# jobsdb_crawl4ai

./: .gitignore  main.py  pyproject.toml
tools/: crawler_config.py  data_extractor.py  models.py
